// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Form renders Profile Form 1`] = `
<div
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-1 MuiTypography-headline-6 MuiTypography-colorTextPrimary-23 MuiTypography-gutterBottom-18"
    >
      Edit Profile
    </h2>
    <div
      aria-describedby="email-helper-text"
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33 MuiInputLabel-marginDense-32"
        data-shrink={true}
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="MuiInput-root-42 MuiInput-disabled-45 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-disabled-45 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={true}
          id="email"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user@email.com"
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-filled-60 MuiFormHelperText-marginDense-58"
        id="email-helper-text"
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33 MuiInputLabel-marginDense-32"
        data-shrink={true}
        htmlFor={undefined}
      >
        Name
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user"
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-filled-60 MuiFormHelperText-marginDense-58"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33 MuiInputLabel-marginDense-32"
        data-shrink={true}
        htmlFor={undefined}
      >
        Description
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="desc"
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-filled-60 MuiFormHelperText-marginDense-58"
        id={undefined}
      >
         
      </p>
    </div>
    <h2
      className="MuiTypography-root-1 MuiTypography-body1-10 MuiTypography-colorTextPrimary-23"
      style={
        Object {
          "color": "#E53935",
        }
      }
    >
      
    </h2>
    <button
      className="MuiButtonBase-root-88 MuiButton-root-62 MuiButton-text-64 MuiButton-outlined-70 MuiButton-sizeSmall-85"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": 10,
        }
      }
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-63"
      >
        Save Profile
      </span>
      <span
        className="MuiTouchRipple-root-91"
      />
    </button>
  </form>
</div>
`;

exports[`Profile Form renders Profile Form with isEditingUser as true 1`] = `
<div
  style={
    Object {
      "marginTop": 24,
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="MuiTypography-root-1 MuiTypography-headline-6 MuiTypography-colorTextPrimary-23 MuiTypography-gutterBottom-18"
    >
      Edit Profile
    </h2>
    <div
      aria-describedby="email-helper-text"
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33 MuiInputLabel-marginDense-32"
        data-shrink={true}
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="MuiInput-root-42 MuiInput-disabled-45 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-disabled-45 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={true}
          id="email"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user@email.com"
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-filled-60 MuiFormHelperText-marginDense-58"
        id="email-helper-text"
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33 MuiInputLabel-marginDense-32"
        data-shrink={true}
        htmlFor={undefined}
      >
        Name
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="user"
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-filled-60 MuiFormHelperText-marginDense-58"
        id={undefined}
      >
         
      </p>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-26 MuiFormControl-marginDense-28"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-35 MuiFormLabel-filled-39 MuiInputLabel-root-30 MuiInputLabel-formControl-31 MuiInputLabel-animated-34 MuiInputLabel-shrink-33 MuiInputLabel-marginDense-32"
        data-shrink={true}
        htmlFor={undefined}
      >
        Description
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-underline-46"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-50 MuiInput-inputMarginDense-51"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value="desc"
        />
      </div>
      <p
        className="MuiFormHelperText-root-55 MuiFormHelperText-filled-60 MuiFormHelperText-marginDense-58"
        id={undefined}
      >
         
      </p>
    </div>
    <h2
      className="MuiTypography-root-1 MuiTypography-body1-10 MuiTypography-colorTextPrimary-23"
      style={
        Object {
          "color": "#E53935",
        }
      }
    >
      
    </h2>
    <button
      className="MuiButtonBase-root-88 MuiButton-root-62 MuiButton-text-64 MuiButton-outlined-70 MuiButton-sizeSmall-85"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "marginTop": 10,
        }
      }
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-63"
      >
        <div
          className="MuiCircularProgress-root-98 MuiCircularProgress-colorPrimary-101 MuiCircularProgress-indeterminate-100"
          role="progressbar"
          style={
            Object {
              "height": 22,
              "width": 22,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-103"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle-104 MuiCircularProgress-circleIndeterminate-106"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </span>
      <span
        className="MuiTouchRipple-root-91"
      />
    </button>
  </form>
</div>
`;
